--- a/app/src/main/res/layout/questions_fragment.xml
+++ b/app/src/main/res/layout/questions_fragment.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-<FrameLayout
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuestionsFragment"
+    android:orientation="vertical"
     android:layout_marginBottom="20dp"
     android:layout_marginTop="20dp"
     android:layout_marginEnd="20dp"
@@ -13,8 +13,14 @@
     <TextView
         android:id="@+id/currentQuestion"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20px"
         android:text="" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/options"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+    />
 
-</FrameLayout>
+</LinearLayout>
 </layout>
