--- a/app/src/main/res/layout/title_fragment.xml
+++ b/app/src/main/res/layout/title_fragment.xml
@@ -2,6 +2,11 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.eratoiklio.quiztest.TitleViewModel" />
+    </data>
 <androidx.constraintlayout.widget.ConstraintLayout
     android:id="@+id/root"
     android:layout_width="match_parent"
@@ -33,6 +38,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/appTitle"
         app:layout_constraintBottom_toTopOf="@id/playBtn"
+        app:onItemSelected="@{viewModel}"
         />
 
     <Button
@@ -40,6 +46,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/play"
+        android:onClick="@{viewModel.onClick}"
         tools:layout_editor_absoluteX="1dp"
         tools:layout_editor_absoluteY="186dp"
         app:layout_constraintTop_toBottomOf="@id/categorySpinner"
