--- a/app/src/main/res/layout/questions_fragment.xml
+++ b/app/src/main/res/layout/questions_fragment.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+    <data>
+        <variable
+            name="viewModel"
+            type="com.eratoiklio.quiztest.QuestionsViewModel" />
+    </data>
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,8 +19,8 @@
         android:id="@+id/currentQuestion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="20px"
-        android:text="" />
+        android:layout_marginBottom="5dp"
+        android:text="@{viewModel.questionText}" />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/options"
         android:layout_width="match_parent"
