--- a/app/src/main/res/layout/questions_fragment.xml
+++ b/app/src/main/res/layout/questions_fragment.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="viewModel"
-            type="com.eratoiklio.quiztest.QuestionsViewModel" />
+            type="com.eratoiklio.quiztest.viewmodel.QuestionsViewModel" />
     </data>
 <LinearLayout
     android:layout_width="match_parent"
