--- a/app/src/main/res/layout/results_fragment.xml
+++ b/app/src/main/res/layout/results_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ResultsFragment"
+    tools:context=".view.ResultsFragment"
     android:paddingTop="200dp"
     android:paddingBottom="100dp">
 
