--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/titleFragment"
-        android:name="com.eratoiklio.quiztest.TitleFragment"
+        android:name="com.eratoiklio.quiztest.view.TitleFragment"
         android:label="TitleFragment"
         tools:layout="@layout/title_fragment">
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/resultsFragment"
-        android:name="com.eratoiklio.quiztest.ResultsFragment"
+        android:name="com.eratoiklio.quiztest.view.ResultsFragment"
         android:label="results_fragment"
         tools:layout="@layout/results_fragment" >
         <action
@@ -31,7 +31,7 @@
     </fragment>
     <fragment
         android:id="@+id/questionsFragemnt"
-        android:name="com.eratoiklio.quiztest.QuestionsFragment"
+        android:name="com.eratoiklio.quiztest.view.QuestionsFragment"
         android:label="questions_fragment"
         tools:layout="@layout/questions_fragment" >
         <action
@@ -41,6 +41,6 @@
             app:popUpToInclusive="true" />
         <argument
             android:name="questions"
-            app:argType="com.eratoiklio.quiztest.ApiResponse" />
+            app:argType="com.eratoiklio.quiztest.model.ApiResponse" />
     </fragment>
 </navigation>
